welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:30: error: value % is not a member of java.awt.Color
			marqueSol(T(y + decal.toInt) % getMondeHauteur())
                                                     ^